switched to express and now accepts both url and html

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Document</title>
+    <title>Pager</title>
     <!-- Bootstrap CDN -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
     <!-- CSS -->
@@ -19,11 +19,8 @@
         <div class="card border-0 m-auto" style="width: 35rem;">
             <div class="card-body">
                 <div class="input-group mb-3">
-                    <div class="input-group-prepend">
-                        <span class="input-group-text" id="basic-addon3">https://</span>
-                    </div>
-                    <input id="url" type="text" class="form-control" name="url" placeholder="url" aria-label="url"
-                        aria-describedby="basic-addon2" />
+                    <textarea id="content" type="text" class="form-control" name="url" aria-label="url"
+                        aria-describedby="basic-addon2" > </textarea>
                     <div class="input-group-append">
                         <button id="capture" class="btn btn-primary w-24" type="button">
                             <div id="spinner" class="spinner-border" role="status">
